--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,9 @@ dependencies {
     compile 'cn.pedant.sweetalert:library:1.3'
     // glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    // pick photo
+    compile 'me.iwf.photopicker:PhotoPicker:0.8.10@aar'
+    // nine old android
+    compile 'com.nineoldandroids:library:2.4.0'
 }
 apply plugin: 'com.google.gms.google-services'
