--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
     // for butter knife
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
@@ -48,6 +48,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:9.4.0'
     // fireBase database
     compile 'com.google.firebase:firebase-database:9.4.0'
+    // sweet dialog
+    compile 'cn.pedant.sweetalert:library:1.3'
     // glide
     compile 'com.github.bumptech.glide:glide:3.7.0'
     // pick photo
