--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
 
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+
         <activity android:name="me.iwf.photopicker.PhotoPickerActivity"
             android:theme="@style/photoPickerTheme" />
 
